--- a/index.html
+++ b/index.html
@@ -470,7 +470,8 @@ $(function()
 			'background-position': 'center center', <span class="c4">// Default value</span>
 			'background-repeat': 'no-repeat' <span class="c4">// Default value</span>
 		},
-		<span class="c4">// or like a class. Note that class can not rewrite default values. To rewrite defaults you have to do it through css object.</span>
+		<span class="c4">// or like a class. Note that class can not rewrite default values.
+		// To rewrite defaults you have to do it through css object.</span>
 		openerClass: 'your-class-name'
 	}
 }</code>
@@ -513,19 +514,19 @@ $(function()
 		</p>
 <pre>
 <code>var options = {
-	isAllowed: function(currEl, hint, target)
-	{
-		if(hint.parents('li').first().data('module') === 'c' && currEl.data('module') !== 'c')
-		{
-			hint.css('background-color', '#ff9999');
-			return false;
-		}
-		else
-		{
-			hint.css('background-color', '#99ff99');
-			return true;
-		}
-	}
+    isAllowed: function(currEl, hint, target)
+    {
+        if(hint.parents('li').first().data('module') === 'c' && currEl.data('module') !== 'c')
+        {
+            hint.css('background-color', '#ff9999');
+            return false;
+        }
+        else
+        {
+            hint.css('background-color', '#99ff99');
+            return true;
+        }
+    }
 }</code>
 </pre>
 
