--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 <script src="https://code.jquery.com/jquery-git1.min.js"></script>
-<script src="jquery-sortable-lists-mobile.js"></script>
+<!--<script src="jquery-sortable-lists-mobile.js"></script>-->
+<script src="jquery-sortable-lists.js"></script>
 <script type="text/javascript">
 $(function()
 {
@@ -56,8 +57,8 @@ $(function()
 		opener: {
 			active: true,
 			as: 'html',  // if as is not set plugin uses background image
-			close: '<i class="fa fa-minus c3"></i>',  // or 'fa-minus c3',  // or './imgs/Remove2.png',
-			open: '<i class="fa fa-plus"></i>',  // or 'fa-plus',  // or'./imgs/Add2.png',
+			close: '<i class="fa fa-minus c3"></i>',  // or 'fa-minus c3'
+			open: '<i class="fa fa-plus"></i>',  // or 'fa-plus'
 			openerCss: {
 				'display': 'inline-block',
 				//'width': '18px', 'height': '18px',
@@ -243,7 +244,7 @@ $(function()
 			</section>
 
 			<section>
-				<h2>Lists pattern</h2>
+				<h2>html pattern</h2>
 				<p>Note that li items can contains <span class="c1">only one or max two direct children</span>. Content <span class="c1">div</span> as a wrapper of li content and
 				another <span class="c1">list</span> if item contains nested list. Like this:</p>
 		    </section>
@@ -261,7 +262,7 @@ $(function()
 
 
 		<a name="cssPattern" id="cssPatternAnch"></a>
-		<h2 class="clear">Css pattern</h2>
+		<h2 class="clear">css pattern</h2>
 		<p>If you format li elements this way</p>
 <pre>
 <code>#myList li { background-color:#ddf, padding-left:50px }</code>
@@ -290,7 +291,7 @@ $(function()
 		<h2 class="clear">Active elements</h2>
 
 		<a name="baseElement" id="baseElementAnch"></a>
-		<h3 class="c3">Base element</h3>
+		<h3 class="c3">base element</h3>
 		<p>
             Most important element. Every dragged element is appended to the base element while dragging. Sortable lists plugin adds this element in to the body at the background.
 			It is the ul/ol element with css properties: position:absolute; top:0; left:0.
@@ -308,7 +309,7 @@ $(function()
 </pre>
 
 
-		<h3 class="c3">Currently dragged element</h3>
+		<h3 class="c3">currently dragged element</h3>
 		<p>
             Is dragged element of course. You can have a little problem with the formatting this element. It caused the fact that dragged element
 			is the child of the base element during the dragging. Look at the <a href="#cssPattern" id="toCssPatternAnch">Css pattern</a> how to solve it.
@@ -325,7 +326,7 @@ $(function()
 </pre>
 
 
-		<h3 class="c3">Placeholder</h3>
+		<h3 class="c3">placeholder</h3>
 		<p>
             Sortable lists plugin generates this li element at the background.
             Element holds the default position of dragged item while dragging.
@@ -340,7 +341,7 @@ $(function()
 </pre>
 
 
-		<h3 class="c3">Hint</h3>
+		<h3 class="c3">hint</h3>
 		<p>
             This element generates the plugin at the background. Element shows the possible future position of dragged item.
             You can set the css via hintClass or hintCss in options object.
@@ -354,7 +355,7 @@ $(function()
 </pre>
 
 
-		<h3 class="c3">Hint wrapper</h3>
+		<h3 class="c3">hint wrapper</h3>
 		<p>
             Plugin generates this element if is necessary to wrap the future position by ul/ol.
 			Default type of wrapper is <span class="c1">UL</span>. You can change it in settings object by <span class="c1">listSelector</span> property.
@@ -371,8 +372,8 @@ $(function()
 </pre>
 
 
-			<h2>Another settings</h2>
-			<h3 class="c2">List selector, list class</h3>
+			<h2>another settings</h2>
+			<h3 class="c2">list selector, list class</h3>
 			<p>
                 Sortable lists plugin needs to know which type of lists(ul/ol) you want to use if is necessary to wrap item by ul/ol.
 			    Plugin also does not know which classes do you use to format your lists so you have to set listsClass or listsCss property of settings object.
@@ -402,7 +403,7 @@ $(function()
 </pre>
 
 
-			<h3 class="c2">Insert zone</h3>
+			<h3 class="c2">insertZone</h3>
 			<p>
                 This property defines the distance from the left, which determines
                 if item will be inserted outside(before/after) or inside of another item.
@@ -414,7 +415,7 @@ $(function()
 </pre>
 
 
-			<h3 class="c2">Insert zone plus</h3>
+			<h3 class="c2">insertZonePlus</h3>
 			<p>
                 This property extends insert zone functionality. Ensures displaying hint node outside(before/after)
                 every time even if cursor is in inside inserting zone. This option is little expensive so check it carefully.
@@ -425,18 +426,18 @@ $(function()
 }</code>
 </pre>
 
-            <b>Example</b>
+            <b>example</b>
 
-            <ol id="sTreePlus" class="sTreePlus mV10">
+            <ul id="sTreePlus" class="sTreePlus mV10">
                 <li><div>Item 1</div></li>
                 <li><div>Item 2</div></li>
                 <li><div>Item 3</div></li>
                 <li><div>Item 4</div></li>
-            </ol>
+            </ul>
 
 
-			<h3 class="c2">Autoscroll speed</h3>
-			<p>Yes you are right. This property defines the speed of auto scrolling.</p>
+			<h3 class="c2">scroll</h3>
+			<p>This property defines the speed of auto scrolling.</p>
 <pre>
 <code>var options = {
 	scroll: 20
@@ -444,7 +445,7 @@ $(function()
 </pre>
 
 
-			<h3 class="c2">Open/close function</h3>
+			<h3 class="c2">opener open/close function</h3>
 			<p>
                 This option enables you to hide/show nested lists. Plugin prepends span element to the content div of items with nested lists.
 				You can set this element through the opener object of options.
@@ -506,9 +507,9 @@ $(function()
 </pre>
 
 
-		<h3 class="c2">Callback isAllowed</h3>
+		<h3 class="c2">callback isAllowed</h3>
 		<p>
-            isAllowed is anonymous function which determines if item can be inserted to the active area. It takes three arguments:
+			isAllowed is anonymous function which determines if item can be inserted to the active area. It takes three arguments:
 			currEl == currently dragged el., hint == hint, target == <span class="c1">li</span> wrapper of hint element. Look at the code of isAllowed from first example of the page.
 			It disallows you to insert item to the "c" module if it is not from "c" module by default.
 		</p>
@@ -531,7 +532,7 @@ $(function()
 </pre>
 
 
-			<h3 class="c2">Callback onDragStart</h3>
+			<h3 class="c2">callback onDragStart</h3>
 			<p>Is called before dragging. Takes two arguments: e - jQ event object and el - dragged li element.</p>
 <pre>
 <code>var options = {
@@ -543,7 +544,7 @@ $(function()
 </pre>
 
 
-			<h3 class="c2">Callback onChange</h3>
+			<h3 class="c2">callback onChange</h3>
 			<p>
                 Is called after the drop but only if the position of dragged element was changed.
                 Takes one argument: cEl - currently dragged element.
@@ -558,7 +559,7 @@ $(function()
 </pre>
 
 
-			<h3 class="c2">Callback complete</h3>
+			<h3 class="c2">callback complete</h3>
 			<p>Is called every time after the drop. Takes one argument: cEl - currently dragged element.</p>
 <pre>
 <code>var options = {
