--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ $(function()
 		{
 			// Be carefull if you test some ul/ol elements here.
 			// Sometimes ul/ols are dynamically generated and so they have not some attributes as natural ul/ols.
-			// Be careful also if the hint is not visible. It has only display none so it is at the previouse place where it was before(excluding first moves before showing).
+			// Be careful also if the hint is not visible. It has only display none so it is at the previous place where it was before(excluding first moves before showing).
 			if( target.data('module') === 'c' && cEl.data('module') !== 'c' )
 			{
 				hint.css('background-color', '#ff9999');
