--- a/index.html
+++ b/index.html
@@ -137,7 +137,15 @@ $(function()
 			<a href="https://github.com/camohub/jquery-sortable-lists/zipball/master" class="btn">Download as .zip</a>
 			<a href="https://github.com/camohub/jquery-sortable-lists/tarball/master" class="btn">Download as .tar.gz</a>
 			<a href="https://github.com/camohub/jquery-sortable-lists" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-			<br><b><span class="small1 c6">Or you can use: $&nbsp;bower&nbsp;install&nbsp;jquery-sortable-lists</span></b>
+
+			<br><b><span class="small1 c6">$&nbsp;npm&nbsp;install&nbsp;jquery-sortable-lists&nbsp;&nbsp;&nbsp;&nbsp; $&nbsp;bower&nbsp;install&nbsp;jquery-sortable-lists</span></b>
+			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" style="display: inline-block; float: right; margin-left: 20px;">
+				<input type="hidden" name="cmd" value="_s-xclick" />
+				<input type="hidden" name="hosted_button_id" value="JF7CR87V56CQA" />
+				<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+				<img alt="" border="0" src="https://www.paypal.com/en_SK/i/scr/pixel.gif" width="1" height="1" />
+			</form>
+
 		</section>
 	</div>
 </header>
@@ -608,6 +616,7 @@ $('#toStrBtn').on('click', function() { console.log($('#sTree2').sortableListsTo
             <input type="image" class="pR t10" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
+
 
 
 	</section>
